--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -140,4 +140,8 @@
 
     <!-- SD Card can be removed without removing battery -->
     <bool name="config_batterySdCardAccessibility">true</bool>
+    
+    <!-- Doze -->
+    <bool name="config_enableAutoPowerModes">true</bool>
+    
 </resources>
